--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="tentangkami.html">Tentang Kami</a></li>
             <li><a href="#home">Home</a></li>
             <li><a href="kontak.html">Kontak</a></li>
+            <li><a href="legalistas.html">Legalitas</a></li>
         </ul>
     </nav>
 
