--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="tentangkami.html">Tentang Kami</a></li>
             <li><a href="#home">Home</a></li>
             <li><a href="kontak.html">Kontak</a></li>
-            <li><a href="legalistas.html">Legalitas</a></li>
+            <li><a href="legalitas.html">Legalitas</a></li>
         </ul>
     </nav>
 
@@ -39,11 +39,11 @@
             <img src="ruang2.jpeg" alt="Artikel 3">
             <h3>Ruangan bertemakan modern</h3>
             <p>Interior yang nyaman dan rapih</p>
-        </div>f
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Blog Perusahaan | Semua Hak Cipta Dilindungi</p>
+        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @indra_06</p>
     </footer>
 
     <script src="script.js"></script>
@@ -55,9 +55,6 @@
 </div>
 
 <script>
-    function showAlert(articleTitle) {
-        alert("Anda membuka " + articleTitle);
-    }
 
     function showDiscountMessage() {
         const message = document.getElementById("discount-message");
