--- a/tentangkami.html
+++ b/tentangkami.html
@@ -25,10 +25,10 @@
 
         <h2>Layanan Kami</h2>
         <ul>
-            <li>Layanan customer service yang sudah disediakan</li>
-            <li>Fasilitas-fasilitas yang memadai</li>
-            <li>Pemeliharaan komplek yang konsisten</li>
-            <li>Pengawasan dan pengamanan yang ketat pada setiap sudut komplek</li>
+            <p>Layanan customer service yang sudah disediakan</p>
+            <p>Fasilitas-fasilitas yang memadai</p>
+            <p>Pemeliharaan komplek yang konsisten</p>
+            <p>Pengawasan dan pengamanan yang ketat pada setiap sudut komplek</p>
             <br>
         </ul>
 
