--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @indra_06</p>
+        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @in_dra_6</p>
     </footer>
 
     <script src="script.js"></script>
