--- a/kontak.html
+++ b/kontak.html
@@ -26,7 +26,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Blog Perusahaan | Semua Hak Cipta Dilindungi</p>
+        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @in_dra_6</p>
     </footer>
 
     <script>
