--- a/legalitas.html
+++ b/legalitas.html
@@ -26,7 +26,7 @@
     </section></br>
 
     <footer>
-        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @indra_06</p>
+        <p>&copy; 2024 Blog Perusahaan | Dimiliki oleh @in_dra_6</p>
     </footer>
 
     <script>
