--- a/tentangkami.html
+++ b/tentangkami.html
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Blog Perusahaan | Semua Hak Cipta Dilindungi</p>
+        <p>&copy; 2024 Blog Perusahaan | DImiliki oleh @in_dra_6</p>
     </footer>
 
     <script>
